Fix hero-intro text color in dark mode

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -782,6 +782,10 @@ footer {
     background: rgba(45, 60, 68, 0.7);
     border-color: rgba(255, 255, 255, 0.07);
   }
+
+  .hero-intro {
+    color: #dadbdf;
+  }
 }
 
 @media print, screen and (max-width: 1100px) {
